--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "natives": "^1.1.6",
+    "ng2-semantic-ui": "^0.9.7",
     "rxjs": "~6.6.0",
+    "semantic-ui-segment": "^2.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -30,6 +33,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "gulp-header": "^2.0.9",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
